<resources>
    <string name="app_name">MedTrack</string>
    <string name="resend_link"><u>Send Again</u></string>
    <string name="title_activity_home">Home</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_appointment">Book an Appointment</string>
    <string name="menu_medicine">Order Medicines</string>
    <string name="menu_emergency">Call 102</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_appointments">Upcoming Appointments</string>
    <string name="home_schedules">Schedule for today</string>
    <string name="home_pills">Add new medicine</string>
    <string name="menu_tools">Tools</string>
    <string name="title_activity_location">Map</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBJ1OONRQrlirIGYeolf3ulsw5xqAtM8so</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="title_activity_nav__drawer">Nav_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">MainActivity</string>

    <string name="title_activity_today">Today</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_tomorrow">Tomorrow</string>
    <string name="title_activity_add">Add Alarm!</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_alert">Alert Activity Screen</string>
    <string name="str_btn_set_alarm">Set Alarm</string>
    <string name="str_btn_cancel">Cancel</string>
    <string name="str_tv_message">Opened by Alarm</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="pill_name">Please insert pill name</string>

    <string name="Monday">Mo</string>
    <string name="Tuesday">Tu</string>
    <string name="Wednesday">We</string>
    <string name="Thursday">Th</string>
    <string name="Friday">Fr</string>
    <string name="Saturday">Sa</string>
    <string name="Sunday">Su</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_edit">edit</string>
    <string name="title_activity_tabbing">Tabbing</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav">nav</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>
